Fix overflow hidden to page scroll

--- a/main.css
+++ b/main.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow: hidden;
+  height: 100%;
+}
+
 :root {
   --color-background-body: #f5fbff;
   --color-text-body: #3c3a4a;
